# browser_ai

./: .gitignore  AGENTS.md  README.md  gemini_openai_server.py  package-lock.json  package.json
legacy/: gemini_openai_server.py
src/: pyproject.toml
src/browser_ai/: __init__.py  cleaning.py  cli.py  config.py  models.py  prompt.py  server.py  session.py  tools.py
src/browser_ai/backends/: __init__.py  base.py  chatgpt.py  gemini.py  grok.py  perplexity.py
src/browser_ai/compat/: __init__.py  continue_compat.py
src/browser_ai/static/: app.js  index.html
